# SparkPlug_Core

./: Aabb.h  Byteorder.cpp  Byteorder.h  CMakeLists.txt  Char.cpp  Char.h  Common.cpp  Common.h  Crc32.cpp  Crc32.h  Directory.cpp  Directory.h  File.cpp  File.h  FileInfo.cpp  FileInfo.h  FsMonitor.cpp  FsMonitor.h  FsMonitorINotify.h  FsMonitorKQueue.h  FsMonitorWin32.h  Image.cpp  Image.h  Log.cpp  Log.h  Logic.h  Math.h  Matrix.h  MersenneTwister.cpp_  Path.cpp  Path.h  Pixel.cpp  Pixel.h  Platform.h  Quaternion.h  Random.cpp  Random.h  Reference.cpp  Reference.h  Reference_Impl.h  (+12 more)
Source/: CMakeLists.txt
Source/SparkPlug/: .directory  Byteorder.cpp  CMakeLists.txt  Config.h  Crc32.cpp  File.cpp  FileInfo.cpp  FsMonitor.h  FsMonitorKQueue.h  Image.cpp  Image.h  Interpolation.h  Log.cpp  Log.h  Logic.h  Reference_Impl.h  Simplex.cpp  Simplex.h  String.cpp  Time.cpp  Vector.h
Source/Tests/: CMakeLists.txt  test.cpp
gfx/: Image.h
